--- a/big2test.html
+++ b/big2test.html
@@ -36,7 +36,7 @@
         }
         iframe {
             width: 100%;
-            height: 600px;
+            height: 500px;
             border: none;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 5px;
@@ -72,9 +72,9 @@
     <h1>大老二 測試頁面</h1>
 
     <div class="switch-buttons">
-        <button id="btnSetting">Setting 頁</button>
-        <button id="btnCount">Count 頁</button>
-        <button id="btnScore">Score 頁</button>
+        <button id="btnSetting">Setting</button>
+        <button id="btnCount">Count</button>
+        <button id="btnScore">Score</button>
     </div>
 
     <!-- 內嵌頁面 (iframe) -->
